WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119562
WebGL on AppleWin port needs GraphicsContext3D
https://bugs.webkit.org/show_bug.cgi?id=119562
Summary
WebGL on AppleWin port needs GraphicsContext3D
Alex Christensen
Reported
2013-08-07 16:08:51 PDT
This patch represents a step towards getting WebGL working on the AppleWin port. I've moved GLContext and GraphicsContext3DPrivate in the Visual Studio filters and enabled them on Windows, made GraphicsContext3DWin almost identical to GraphicsContext3DCairo, and made a PlatformCALayer. This code compiles and runs without crashing, but it still doesn't draw to the screen. It's a step in the right direction, though.
Attachments
Patch
(10.83 KB, patch)
2013-08-08 00:08 PDT
,
Alex Christensen
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alex Christensen
Comment 1
2013-08-08 00:08:35 PDT
Created
attachment 208314
[details]
Patch
Brent Fulgham
Comment 2
2013-08-08 12:13:19 PDT
Comment on
attachment 208314
[details]
Patch r=me
Alex Christensen
Comment 3
2013-08-08 13:18:36 PDT
r153843
Brent Fulgham
Comment 4
2014-01-09 20:51:59 PST
***
Bug 57421
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug